<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="32sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:text="@string/complete_registration"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlack"
            >

            <EditText
                android:hint="@string/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="12sp"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="16dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlack"
            >

            <EditText
                android:hint="@string/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="12sp"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="16dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlack"
            >

            <EditText
                android:hint="@string/phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="12sp"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="16dp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorBlack"
            >

            <EditText
                android:hint="@string/date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:textSize="12sp"
                android:textColor="@color/colorBlack"
                android:layout_marginBottom="16dp"/>
        </android.support.design.widget.TextInputLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:text="@string/interests"
            android:textColor="@color/colorBlack"
            android:textSize="21sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            android:layout_marginBottom="16dp"
            android:background="@drawable/button_look"
            android:elevation="36dp"
            >
<android.support.v7.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="16dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
            <GridLayout
                android:id="@+id/grid_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:columnCount="3"
                android:orientation="horizontal"
                android:rowCount="2"
                android:layout_marginTop="16dp"

                >

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button1"
                    android:layout_gravity="start"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/music"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/button_look3"
                    android:gravity="center"

                    />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button2"
                    android:layout_gravity="start"
                    android:layout_marginRight="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/movies"
                    android:textColor="@color/colorWhite"
                    android:gravity="center"
                    android:background="@drawable/button_look3"                   />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button3"
                    android:layout_gravity="start|top"
                    android:text="@string/history"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/button_look3"
                    android:gravity="center"

                    />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button4"
                    android:layout_gravity="start|top"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/cooking"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/button_look3"
                    android:gravity="center"

                    />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button5"
                    android:layout_gravity="start|top"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/sport"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/button_look3"
                    android:gravity="center"

                    />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button6"
                    android:layout_gravity="start|top"
                    android:layout_marginTop="8dp"
                    android:text="@string/design"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/button_look3"
                    android:gravity="center"

                    />

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/button7"
                    android:layout_gravity="start|top"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:text="@string/books"
                    android:textColor="@color/colorWhite"
                    android:background="@drawable/button_look3"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"

                    />

            </GridLayout>
    </ScrollView>
</android.support.v7.widget.CardView>
            <android.support.design.widget.FloatingActionButton
                android:id="@+id/floatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="16dp"
                app:backgroundTint="@color/colorPrimaryDark"
                android:src="@drawable/ic_add_circle_outline_black_24dp"/>

        </LinearLayout>
    </LinearLayout>
</ScrollView>