<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="32dp"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/ps_logo"
            app:civ_border_width="2dp"
            app:civ_border_color="@color/colorOrange"
            android:layout_marginBottom="36dp"
            />

        <TextView
            android:textStyle="bold"
            android:textSize="24sp"
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/app_name"
            android:textColor="@color/colorOrange"
            />


        <TextView
            android:textStyle="bold"
            android:textColor="@color/colorBlack"
            android:textSize="21sp"
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/log_in"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_editor_absoluteX="16dp">

            <TextView
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email" />

            <EditText
                android:padding="8dp"
                android:background="@drawable/edit_text_look"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:drawableLeft="@drawable/ic_email_black_24dp"
                android:drawableStart="@drawable/ic_email_black_24dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="16dp">

            <TextView

                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/colorBlack"/>

            <EditText
                android:padding="8dp"
                android:background="@drawable/edit_text_look"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_editor_absoluteX="16dp">

            <LinearLayout
                android:layout_marginBottom="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/textView2"
                tools:layout_editor_absoluteX="16dp"
                android:layout_gravity="center"
                android:gravity="center">
                <TextView
                    android:textSize="16sp"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorBlack"

                    />

                <TextView
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/forgot_password"
                    android:textColor="@color/colorBlack"/>
            </LinearLayout>
            <android.support.v7.widget.AppCompatButton
                android:padding="8dp"
                android:background="@drawable/button_look"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:text="@string/sign_in"
                android:textSize="18sp"
                android:textColor="@color/colorWhite"
                android:layout_marginStart="32dp"
                android:layout_marginRight="32dp"
                android:layout_marginEnd="32dp"
                />
            <TextView
                android:layout_marginTop="16dp"
                android:textSize="18sp"
                android:layout_marginBottom="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/or_sign_up_using"
                android:textColor="@color/colorBlack"
                android:layout_gravity="center"/>
        </LinearLayout>
    <LinearLayout
android:layout_marginRight="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="16dp"
        >

    <android.support.v7.widget.AppCompatImageButton
android:src="@drawable/ic_facebook"
        android:background="@drawable/button_look"
            android:layout_width="0dp"
            android:layout_height="42dp"
        android:layout_weight="1"
        android:layout_margin="8dp"


            />
            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_gravity="center"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                />
    </LinearLayout>
    </LinearLayout>
</ScrollView>
